--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./resources/css/style.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <title>Excursion</title>
     </head>
     <body>
@@ -13,6 +14,35 @@
             <h1>Discover hidden places in the world around you</h1>
             <a href="#">Download Excursion (Coming soon!)</a>
         </header>
-        
+
+        <main>
+
+            <!-- Video Section-->
+            <video width="404" height="720" autoplay>
+                <source src="./resources/videos/excursion.mp4" type="video/mp4">
+                    Your browser does not support playing this video.
+            </video>
+            
+            <!--Feature Section-->
+            <div id="feature">
+                <h2>Your personal travel guide</h2>
+                <h4>Excursion remembers places you like, and recommends new points of interest around you.</h4>
+                <p class="images">
+                    <img src="./resources/images/camp.jpg" alt="Tents on rocky sandy terrain">
+                </p>
+            </div>
+
+            <!--Footer Section-->
+            <footer>
+                <p class="images">
+                    <img src="./resources/images/phone.png" alt="Icon of smartphone">
+                </p>
+                <h2>Coming Soon for iPhone and Android</h2>
+                <a href="#">Download Excursion (Coming soon!)</a>
+                <i class="fa fa-copyright"></i>
+                <h4>Excursion</h4>
+            </footer>
+
+        </main>
     </body>
 </html>
