Fixed HTML Video Loop & CSS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <main>
 
             <!-- Video Section-->
-            <video width="404" height="720" autoplay>
+            <video width="404" height="720" autoplay muted loop>
                 <source src="./resources/videos/excursion.mp4" type="video/mp4">
                     Your browser does not support playing this video.
             </video>
@@ -32,15 +32,16 @@
                 </p>
             </div>
 
+            <!--Supporting Section-->
+            <p class="images">
+                <img src="./resources/images/phone.png" alt="Icon of smartphone">
+            </p>
+            <h2>Coming Soon for iPhone and Android</h2>
+            <a href="#">Download Excursion (Coming soon!)</a>          
+
             <!--Footer Section-->
             <footer>
-                <p class="images">
-                    <img src="./resources/images/phone.png" alt="Icon of smartphone">
-                </p>
-                <h2>Coming Soon for iPhone and Android</h2>
-                <a href="#">Download Excursion (Coming soon!)</a>
-                <i class="fa fa-copyright"></i>
-                <h4>Excursion</h4>
+                <h4>© Excursion</h4>
             </footer>
 
         </main>
